--- a/src/App.css
+++ b/src/App.css
@@ -614,6 +614,10 @@ video {
   right: 0px;
 }
 
+.right-10{
+  right: 2.5rem;
+}
+
 .right-4{
   right: 1rem;
 }
@@ -626,24 +630,16 @@ video {
   top: 1rem;
 }
 
-.right-10{
-  right: 2.5rem;
-}
-
-.z-50{
-  z-index: 50;
-}
-
-.z-0{
-  z-index: 0;
+.z-30{
+  z-index: 30;
 }
 
 .z-40{
   z-index: 40;
 }
 
-.z-30{
-  z-index: 30;
+.z-50{
+  z-index: 50;
 }
 
 .mx-auto{
@@ -680,16 +676,16 @@ video {
   margin-top: 2.5rem;
 }
 
+.mt-2{
+  margin-top: 0.5rem;
+}
+
 .mt-3{
   margin-top: 0.75rem;
 }
 
 .mt-4{
   margin-top: 1rem;
-}
-
-.mt-2{
-  margin-top: 0.5rem;
 }
 
 .inline{
@@ -740,6 +736,10 @@ video {
   height: 100vh;
 }
 
+.h-dvh{
+  height: 100dvh;
+}
+
 .min-h-screen{
   min-height: 100vh;
 }
@@ -776,20 +776,12 @@ video {
   width: 100%;
 }
 
-.max-w-4xl{
-  max-width: 56rem;
-}
-
-.max-w-lg{
-  max-width: 32rem;
-}
-
-.max-w-xl{
-  max-width: 36rem;
-}
-
 .max-w-2xl{
   max-width: 42rem;
+}
+
+.max-w-4xl{
+  max-width: 56rem;
 }
 
 .flex-1{
@@ -868,6 +860,11 @@ video {
   background-color: rgb(215 211 74 / var(--tw-bg-opacity));
 }
 
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-blue-500{
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
@@ -881,16 +878,6 @@ video {
 .bg-gray-900{
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}
-
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-75{
