--- a/src/App.css
+++ b/src/App.css
@@ -606,8 +606,8 @@ video {
   inset: 0px;
 }
 
-.bottom-0{
-  bottom: 0px;
+.left-0{
+  left: 0px;
 }
 
 .right-0{
@@ -624,6 +624,10 @@ video {
 
 .top-0{
   top: 0px;
+}
+
+.top-3\/4{
+  top: 75%;
 }
 
 .top-4{
@@ -668,6 +672,14 @@ video {
   margin-left: 1rem;
 }
 
+.ml-64{
+  margin-left: 16rem;
+}
+
+.ml-\[274px\]{
+  margin-left: 274px;
+}
+
 .mr-3{
   margin-right: 0.75rem;
 }
@@ -676,8 +688,16 @@ video {
   margin-top: 2.5rem;
 }
 
+.mt-12{
+  margin-top: 3rem;
+}
+
 .mt-2{
   margin-top: 0.5rem;
+}
+
+.mt-20{
+  margin-top: 5rem;
 }
 
 .mt-3{
@@ -686,10 +706,6 @@ video {
 
 .mt-4{
   margin-top: 1rem;
-}
-
-.inline{
-  display: inline;
 }
 
 .flex{
@@ -734,10 +750,6 @@ video {
 
 .h-screen{
   height: 100vh;
-}
-
-.h-dvh{
-  height: 100dvh;
 }
 
 .min-h-screen{
@@ -830,6 +842,10 @@ video {
   gap: 1rem;
 }
 
+.overflow-y-auto{
+  overflow-y: auto;
+}
+
 .rounded{
   border-radius: 0.25rem;
 }
@@ -844,6 +860,11 @@ video {
 
 .rounded-md{
   border-radius: 0.375rem;
+}
+
+.rounded-b-md{
+  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
 }
 
 .border{
@@ -905,6 +926,11 @@ video {
   padding: 2rem;
 }
 
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
@@ -920,8 +946,16 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.pb-5{
+  padding-bottom: 1.25rem;
+}
+
 .pl-10{
   padding-left: 2.5rem;
+}
+
+.pt-10{
+  padding-top: 2.5rem;
 }
 
 .text-2xl{
