--- a/src/App.css
+++ b/src/App.css
@@ -656,6 +656,26 @@ video {
   margin-bottom: 2.5rem;
 }
 
+.mx-80{
+  margin-left: 20rem;
+  margin-right: 20rem;
+}
+
+.mx-40{
+  margin-left: 10rem;
+  margin-right: 10rem;
+}
+
+.mx-20{
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
+
+.mx-10{
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
 .mb-4{
   margin-bottom: 1rem;
 }
@@ -716,6 +736,10 @@ video {
   display: grid;
 }
 
+.hidden{
+  display: none;
+}
+
 .h-10{
   height: 2.5rem;
 }
@@ -752,6 +776,14 @@ video {
   height: 100vh;
 }
 
+.h-8{
+  height: 2rem;
+}
+
+.h-20{
+  height: 5rem;
+}
+
 .min-h-screen{
   min-height: 100vh;
 }
@@ -786,6 +818,26 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.min-w-60{
+  min-width: 15rem;
+}
+
+.min-w-40{
+  min-width: 10rem;
+}
+
+.min-w-14{
+  min-width: 3.5rem;
+}
+
+.min-w-20{
+  min-width: 5rem;
+}
+
+.min-w-24{
+  min-width: 6rem;
 }
 
 .max-w-2xl{
@@ -1095,7 +1147,82 @@ video {
 }
 
 @media (min-width: 768px){
+  .md\:fixed{
+    position: fixed;
+  }
+
+  .md\:ml-64{
+    margin-left: 16rem;
+  }
+
+  .md\:ml-1{
+    margin-left: 0.25rem;
+  }
+
+  .md\:ml-\[1\/4\]{
+    margin-left: 1/4;
+  }
+
+  .md\:ml-4{
+    margin-left: 1rem;
+  }
+
+  .md\:ml-40{
+    margin-left: 10rem;
+  }
+
+  .md\:ml-\[\]{
+    margin-left: ;
+  }
+
+  .md\:ml-\[140\]{
+    margin-left: 140;
+  }
+
+  .md\:ml-\[140px\]{
+    margin-left: 140px;
+  }
+
+  .md\:ml-\[200px\]{
+    margin-left: 200px;
+  }
+
+  .md\:ml-\[180px\]{
+    margin-left: 180px;
+  }
+
+  .md\:block{
+    display: block;
+  }
+
   .md\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  @media (min-width: 1024px){
+    .md\:lg\:text-2xl{
+      font-size: 1.5rem;
+      line-height: 2rem;
+    }
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:ml-64{
+    margin-left: 16rem;
+  }
+
+  .lg\:ml-\[274px\]{
+    margin-left: 274px;
+  }
+
+  .lg\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
